2005-02-08  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/diag_sprintf1.c 
	* tests/diag_sprintf2.c
	* cdl/infra.cdl: Used the sprintf test from libc to test 
	  diag_sprintf.

2005-02-08  Christoph Csebits <Christoph.CSEBITS@frequentis.com>

	* src/diag.cxx (diag_snprintf): Off by one error could cause the
	end of the buffer to be overrun.

2004-07-12  Gary Thomas  <gary@mlbassoc.com>

	* src/diag.cxx (_vprintf): Fix return length for %%

2004-06-30  Gary Thomas  <gary@mlbassoc.com>

	* src/diag.cxx (_vprintf): Returned [length] was wrong for %p

2004-04-16  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/cxxsupp.cxx: Allow inline function to be correctly inlined.

2004-04-15  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/cyg_type.h: added CYG_ATTRIB_ALIGN_MAX and
	CYGBLD_ATTRIB_ALIGNOFTYPE. Inspired by Robert Larice.
	
2004-01-08  Jani Monoses <jani@iv.ro>

	* src/diag.cxx (diag_check_string): Allow '\t' in format strings.
	
2004-01-05  Gary Thomas  <gary@mlbassoc.com>

	* tests/fc_test.c: 
	* src/tcdiag.cxx (cyg_assert_msg): 'fconfig' API changed again.

2003-12-21  Gary Thomas  <gary@mlbassoc.com>

	* tests/fc_test.c: New test/demonstration of 'fconfig' access.

	* src/tcdiag.cxx (cyg_assert_msg): Interface to 'fconfig' data
	has changed.

2003-10-11  Gary Thomas  <gary@mlbassoc.com>

	* src/tcdiag.cxx (cyg_test_exit): 
	* cdl/infra.cdl: New option CYGSEM_INFRA_RESET_ON_TEST_EXIT which
	[if defined] indicates that "cyg_test_exit()" should reset the 
	platform instead of the default hang.

2003-10-03  Nick Garnett  <nickg@balti.calivar.com>

	* tests/cxxsupp.cxx: Added ifdef to disable this test on H8/300
	targets. The H8/300 toolchain does not currently have C++ support.

2003-07-01  Michael Checky  <Michael_Checky@ThermoKing.com>

	* src/diag.cxx: Added support for the 'z' qualifier in format strings.

2003-05-05  Gary Thomas  <gary@mlbassoc.com>

	* cdl/infra.cdl: Add option to control number of times tests run.
